feat: add servers and channels
